--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-body {
+/* body {
   background-color: black !important;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
+} */
 .App {
   text-align: center;
 }
