--- a/src/component/style.css
+++ b/src/component/style.css
@@ -1,4 +1,8 @@
-
+body {
+    background-color: black !important;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
 .buttonMerah {
     width: 135px;
     height: 40px;
@@ -20,7 +24,7 @@
     width: 110px;
     height: 30px;
     color: white;
-    background-color: #F74D4D; 
+    background-color:#56C05A; 
     border-radius: 5px;
     border: 0;
 }
@@ -30,7 +34,7 @@
     height: 30px;
     color: white;
     border-radius: 5px;
-    background-color: #56C05A;   
+    background-color: #F74D4D;   
     border: 0;
 }
 
@@ -56,9 +60,10 @@
 }
 
 .kotak {
-width: 524px;
-height: 145px;
-background-color: #303030;
+width: 500px;
+height: 120px;
+background-color: #242424;
+border-radius: 3px;
 
 }
 
@@ -70,13 +75,6 @@ background-color: #303030;
     background-color: #F74D4D;   
     border: 0;
     margin-right: 30px;
-}
-
-.chat {
-    position: absolute;
-    width: 870px;
-    bottom: 0;
-    padding-left: 30px;
 }
 
 
@@ -103,25 +101,44 @@ background-color: #303030;
     border-radius: 5px;
 }
 
-.talktext p {
-    color: white;
-    font-size: 13px;
-    padding: 7px;
-}
-    .tri-right.left-in:after{
-        /* content: '  '; */
-        position: absolute;
-        width: 0;
-        height: 0;
-      left: -20px;
-        right: auto;
-      top: 20px;
-        bottom: auto;
-        border: 12px solid;
-        border-color: lightyellow lightyellow transparent transparent;
+
+    .hello:hover{
+        color: #F74D4D !important;
+
     }
-    .talktext p{
-        /* remove webkit p margins */
-        -webkit-margin-before: 0em;
-        -webkit-margin-after: 0em;
-      }
+
+    .hello {
+        font-size: 15px;
+    }
+
+    .inputForm {
+        background-color: rgb(131, 131, 131);
+        border: 1px solid white;
+        border-radius: 4px;
+}
+    .inputSearch {
+        background-color: rgb(0, 0, 0);
+        border: 1px solid rgb(142, 140, 140);
+        height: 35px;
+        margin-top: 5px;
+        border-radius: 4px;
+}
+
+.pembatas {
+    height: 100vh;
+    position: relative;
+    bottom: 0;
+    left: 10px;
+    border-left: 1px solid rgb(75, 75, 75) ;
+}
+
+::placeholder {
+    color: rgb(202, 202, 202) !important;
+}
+
+.error {
+   color: #bb2c2c;
+   margin: 200px;
+   align-items: center;
+   text-align: center;
+}
